--- a/index.html
+++ b/index.html
@@ -13,18 +13,7 @@ layout: default
 <div class="blog-front-page">
   {% for post in site.posts  %}
   {% if post.type =="blog"%}
-
-    <article class="type-system-rounded blog-entry front-page">
-      <p class="type">{{ post.display-category }}</p>
-      <h1>{{ post.title }} </h1>
-      <h2>{{ post.description }}</h2>
-      <p class="date"> {{ post.date | date: '%B %d, %Y' }}</p>
-      <p>
-      {{ post.excerpt | remove: '<p>' | remove: '</p>' }}
-      <a href="{{ post.url }}" class="read-more">Read More <span>&rsaquo;</span></a>
-      </p>
-    </article>
-
+    {% include post.html %}
   {% endif %}
   {% endfor %}
 </div>
@@ -36,24 +25,9 @@ layout: default
     </div>
   </div>
   {% for post in site.posts  %}
-  {% if post.type =="field-note"%}
-  <div class="card">
-    <div class="note-header">
-			{{ post.title }}
-		</div>
-    <div class="card-copy">
-			{{ post.content }}
-    </div>
-    <div class="note-tags">
-			<ul class="tags">
-			{% for tag in post.tags %}
-				<li><a href="#" class="tag">{{ tag }}</a></li>
-			{% endfor %}
-			</ul>
-		</div>
-  </div>
-
-  {% endif %}
+    {% if post.type =="field-note"%}
+      {% include card.html %}
+    {% endif %}
   {% endfor %}
 </div>
 </div>
