Good posts Brent

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ layout: default
 <div class="hero">
   <div class="hero-content">
     <h2 id="greeting">Good Morning,</h2>
-		<p>Welcome to my small patch of the internet. This is where I write about web development, mostly Ruby, Rails, OOP and JavaScript</p>
+		<p>Welcome to my small patch of the internet. This is where I write about
+      web development, mostly JavaScript, React and cats.</p>
   </div>
 </div>
 
